--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-react-app</title>
+    <title>Midland-energies</title>
+    <meta name="google-site-verification" content="9JNzXlSdV0C8vjM4gqI0FmZ7YiUKoYiGp1GrLB3xQvY" />
   </head>
   <body>
     <div id="root"></div>
