--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Midland-energies</title>
     <meta name="google-site-verification" content="9JNzXlSdV0C8vjM4gqI0FmZ7YiUKoYiGp1GrLB3xQvY" />
